--- a/.github/workflows/openhands-resolver.yml
+++ b/.github/workflows/openhands-resolver.yml
@@ -1,6 +1,4 @@
 name: Resolve Issue with OpenHands
-
-
 on:
   issues:
     types: [labeled]
@@ -25,8 +23,8 @@ jobs:
       macro: ${{ vars.OPENHANDS_MACRO || '@openhands-agent' }}
       max_iterations: ${{ fromJson(vars.OPENHANDS_MAX_ITER || 50) }}
       base_container_image: ${{ vars.OPENHANDS_BASE_CONTAINER_IMAGE || '' }}
-      LLM_MODEL: ${{ vars.LLM_MODEL || 'anthropic/claude-3-5-sonnet-20241022' }}
-      target_branch: ${{ vars.TARGET_BRANCH || 'main' }}
+      LLM_MODEL: ${{ vars.LLM_MODEL || 'deepseek/deepseek-reasoner' }}
+      target_branch: ${{ vars.TARGET_BRANCH || 'dev' }}
     secrets:
       PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
       PAT_USERNAME: ${{ secrets.PAT_USERNAME }}
