--- a/.github/workflows/openhands-resolver.yml
+++ b/.github/workflows/openhands-resolver.yml
@@ -59,6 +59,7 @@ permissions:
 
 jobs:
   auto-fix:
+    environment: .env
     if: |
       github.event_name == 'workflow_call' ||
       github.event.label.name == 'fix-me' ||
